--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node backend/server.js",
+    "server":"nodemon backend/server.js",
+    "client":"npm start --prefix frontend",
+    "dev":"concurrently -k \"npm run server\" \"npm run client\" "
   },
   "keywords": [],
   "author": "",
